# mathlang

./: .env  .python-version  Agent.md  Agent_ja.md  Makefile  MathLang_SPECIFICATION.md  README.md  README_PRO.md  Report.md  Untitled.ipynb  check_sympy.py  main.py  pyproject.toml  requirements.txt
.venv312/: pyvenv.cfg
cli/: base_runner.py  modes.py  output.py  scenarios.py
core/: __init__.py  arithmetic_engine.py  ast_nodes.py  computation_engine.py  core_runtime.py  errors.py  evaluator.py  exercise_spec.py  fraction_engine.py  hint_engine.py  i18n.py  input_parser.py  knowledge_registry.py  learning_logger.py  log_formatter.py  logging.py  optimizer.py  parser.py  polynomial.py  polynomial_evaluator.py  scenario.py  symbolic_engine.py  unit_engine.py  validation_engine.py
demo/: README.md  __init__.py  core_extended_demo.ipynb  core_extended_demo.py  demo_cli.py  unit_engine_demo.py  validation_engine_demo.py
docs/: Evaluator_v2_Specification.md  MathLang UI Directory Specification.md  MathLangInputParser_Spec.md  MathLang_CLI_UI_Spec.md  MathLang_Causal_Inference_Engine_Spec_v1.md  MathLang_Core_DSL_v2.5_Spec.md  MathLang_Core_Engine_Architecture_v1.md  MathLang_Core_Engine_v2.3.md  MathLang_Core_Extended_Spec.md  MathLang_DSL_Parser_Design_v1.md  MathLang_DSL_v2_Specification.md  MathLang_Integrated_Spec_v0.0.md  MathLang_SPECIFICATION.md  MathLang_SPECIFICATION_v2.2.md  MathLang_SymbolicEngine_Fix_Specification.md  MathLang_v2.3_full_spec.txt  TESTCASE_InputParser_List.md  TESTCASE_Parser_List.md  TESTPLAN_InputParser.md  TESTPLAN_Parser.md  parser_v2.3.md  (+8 more)
(+131 files in other folders)
